trunk/Archive2/b8/58831f4042c9d6/output
main.cpp:8:94: error: invalid use of incomplete type 'const struct IPv6Address'
     static constexpr IPv6Address AllNodes = { 0xFF, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x01 };    
                                                                                              ^
main.cpp:4:8: error: forward declaration of 'const struct IPv6Address'
 struct IPv6Address
        ^
main.cpp:8:94: error: 'constexpr const IPv6Address IPv6Address::AllNodes' has incomplete type
     static constexpr IPv6Address AllNodes = { 0xFF, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x01 };    
                                                                                              ^
